<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Миллионер</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="podskazka1">П.зала</string>
    <string name="podskazka2">50/50</string>
    <string name="date_picker_title">Date of game</string>
    <string name="about">About menu item</string>
    <string name="exit">Exit the game</string>
    <string name="another_activity_title">About author game info</string>
    <string name="telefonia">Телефония</string>
    <string name="record">Record in game</string>
    <string name="start_game">Start game</string>
    <string name="sum100">1-100$</string>
    <string name="sum300">2-300$</string>
    <string name="sum10000">3-10000$</string>
    <string name="sum50000">4-50000$</string>
    <string name="sum100000">5-100000</string>
    <string name="sum500000">6-500000</string>
    <string name="sum1000000">1000000$</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="cancel">Отмена</string>
    <string name="dialog_title">Ответ неверный-Вы проиграли!</string>
    <string name="dialog_message">Вы неправельно ответили на вопрос!Счет Вашей игры...</string>
    <string name="results_game">Вы ответили на %1$d вопросов. Набрали соответственно %2$d балов!Начать заново</string>
    <string name="dialog_winner">Вы победили! Вы счастливчик!)</string>
    <string name="winner_game">Вы ответили правельно на все 7 вопросов и стаете ПОБЕДИТЕЛЕМ!)</string>

</resources>
