<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5133CCFF"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnf3_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:background="@drawable/no_sound"
        android:text="" />

    <Button
        android:id="@+id/btnf3_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/is50"
        android:text="" />

    <Button
        android:id="@+id/btnf3_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/call_fr3"
        android:text="" />

    <TextView
        android:id="@+id/tv_f3_sum7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/sum1000000" />

    <TextView
        android:id="@+id/tv_f3_sum6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum500000" />

    <TextView
        android:id="@+id/tv_f3_sum5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum100000" />

    <TextView
        android:id="@+id/tv_f3_sum4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum50000" />

    <TextView
        android:id="@+id/tv_f3_sum3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum10000" />

    <TextView
        android:id="@+id/tv_f3_sum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum300" />

    <TextView
        android:id="@+id/tv_f3_sum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum100" />

</LinearLayout>
